もろもろ修正 1、3、5はそれぞれのエンディング

--- a/Resources/event/TOWER-1F-eastcorridor.json
+++ b/Resources/event/TOWER-1F-eastcorridor.json
@@ -843,7 +843,7 @@
 					"imgID":"1"
 				},
 				{
-					"text":["あぁ、余裕だわ。"],
+					"text":["おう、余裕だわ。"],
 					"charaID":"8",
 					"imgID":"3"
 				}
@@ -860,7 +860,7 @@
 					"imgID":"3"
 				},
 				{
-					"text":["心配すんな。\n弱ってるヤツの面倒を見て守る。","俺にゃできねぇことだからよ。"],
+					"text":["心配すんな。\n弱ってるヤツの面倒を見て守る。","ワシにゃできねぇことじゃからよ。"],
 					"charaID":"8",
 					"imgID":"1"
 				}
